home page spacing fix

--- a/src/pages/Home/components/JoinUs/JoinUs.module.scss
+++ b/src/pages/Home/components/JoinUs/JoinUs.module.scss
@@ -4,7 +4,7 @@
 
 .join-us-container {
     background: url("../../../../../public/assets/join-us-background.png");
-    margin-top: 167px;
+    margin-top: 278px;
     margin-bottom: 200px;
     position: relative;
     padding-left: 60px;
